- https://github.com/eclipse-syson/syson/issues/1251[#1251] [explorer] Create `ViewUsage` semantic element in addition to _Diagram_ on _New representation_ menu in _Explorer_ view.
All existing SysON _DiagramDescriptions_ (i.g. _General View_, _Interconnection View_...) have been updated to reflect the fact that they now be associated to `ViewUsages`.

=== New features

- https://github.com/eclipse-syson/syson/issues/1237[#1237] [general-view] Add `ViewUsage` graphical node in the _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1279[#1279] [general-view] Support `ViewUsage` graphical contents in the _General View_ diagram.

== v2025.4.0

=== Shapes

- Add support for library publication

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1079[#1079] [metamodel] Align metamodel to SysMLv2 2024-12 specification released on December 2024(see https://www.omg.org/spec/SysML/ for more details) and KerML 2024-12 specification released on December 2024(see https://www.omg.org/spec/KerML/ for more details).
Please download all your models/projects before upgrading to 2025.4.0.
The new concepts are:
* `CrossSubsetting` (inherits from `Subsetting`)
* `IndexExpression` (inherits from `OperatorExpression`)
The new operations are:
* `Usage#referencedTargetFeature()`
* `Type#supertypes(EBoolean)`
* `Type#removedRedefinedFeatures(Membership)`
* `Type#nonPrivateMemberships(Namespace, Type, EBoolean)`
* `Type#inheritableMemberships(Namespace, Type, EBoolean)`
* `Type#multiplicities()`
* `Namespace#membershipsOfVisibility(VisibilityKind, Namespace)`
* `Membership#allRedefinedFeatures()`
* `Feature#allRedefinedFeatures()`
* `Feature#asCartesianProduct()`
* `Feature#isCartesianProduct()`
* `Feature#isOwnedCrossFeature()`
* `Feature#ownedCrossFeature()`
The new references are:
* `CrossSubsetting#crossedFeature`
* `CrossSubsetting#crossingFeature`
* `Feature#crossFeature`
* `Feature#ownedCrossSubsetting`
* `Annotation#ownedAnnotatingElement`