@@ -14,12 +14,14 @@ package org.eclipse.syson.sysml.impl;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
 import org.eclipse.emf.common.util.BasicEList;
 import org.eclipse.emf.common.util.EList;
 import org.eclipse.emf.ecore.EClass;
 import org.eclipse.emf.ecore.InternalEObject;
+import org.eclipse.emf.ecore.util.EObjectResolvingEList;
 import org.eclipse.emf.ecore.util.EcoreEList;
 import org.eclipse.syson.sysml.Element;
 import org.eclipse.syson.sysml.Expression;
@@ -47,6 +49,17 @@ import org.eclipse.syson.sysml.ViewpointUsage;
  * @generated
  */
 public class ViewUsageImpl extends PartUsageImpl implements ViewUsage {
+
+    /**
+     * The cached value of the '{@link #getExposedElement() <em>Exposed Element</em>}' reference list. <!--
+     * begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     * @ordered
+     * @see #getExposedElement()
+     */
+    protected EList<Element> exposedElement;
+
     /**
      * <!-- begin-user-doc --> <!-- end-user-doc -->
      *
@@ -69,12 +82,14 @@ public class ViewUsageImpl extends PartUsageImpl implements ViewUsage {
     /**
      * <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @generated NOT
+     * @generated
      */
     @Override
     public EList<Element> getExposedElement() {
-        List<Usage> data = new ArrayList<>();
-        return new EcoreEList.UnmodifiableEList<>(this, SysmlPackage.eINSTANCE.getViewUsage_ExposedElement(), data.size(), data.toArray());
+        if (this.exposedElement == null) {
+            this.exposedElement = new EObjectResolvingEList<Element>(Element.class, this, SysmlPackage.VIEW_USAGE__EXPOSED_ELEMENT);
+        }
+        return this.exposedElement;
     }
 
     /**
@@ -188,11 +203,43 @@ public class ViewUsageImpl extends PartUsageImpl implements ViewUsage {
      *
      * @generated
      */
+    @SuppressWarnings("unchecked")
+    @Override
+    public void eSet(int featureID, Object newValue) {
+        switch (featureID) {
+            case SysmlPackage.VIEW_USAGE__EXPOSED_ELEMENT:
+                this.getExposedElement().clear();
+                this.getExposedElement().addAll((Collection<? extends Element>) newValue);
+                return;
+        }
+        super.eSet(featureID, newValue);
+    }
+
+    /**
+     * <!-- begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     */
+    @Override
+    public void eUnset(int featureID) {
+        switch (featureID) {
+            case SysmlPackage.VIEW_USAGE__EXPOSED_ELEMENT:
+                this.getExposedElement().clear();
+                return;
+        }
+        super.eUnset(featureID);
+    }
+
+    /**
+     * <!-- begin-user-doc --> <!-- end-user-doc -->
+     *
+     * @generated
+     */
     @Override
     public boolean eIsSet(int featureID) {
         switch (featureID) {
             case SysmlPackage.VIEW_USAGE__EXPOSED_ELEMENT:
-                return !this.getExposedElement().isEmpty();
+                return this.exposedElement != null && !this.exposedElement.isEmpty();
             case SysmlPackage.VIEW_USAGE__SATISFIED_VIEWPOINT:
                 return !this.getSatisfiedViewpoint().isEmpty();
             case SysmlPackage.VIEW_USAGE__VIEW_CONDITION:
